--- a/web-api/package.json
+++ b/web-api/package.json
@@ -22,9 +22,12 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@youtube-sync/database": "../packages/database",
     "@youtube-sync/domain": "../packages/domain",
+    "@youtube-sync/youtube-client": "../packages/youtube-client",
     "aws-sdk": "^2.1057.0",
     "googleapis": "^92.0.0",
     "reflect-metadata": "^0.1.13",
