Moved all shared code to youtube-sync/core package

--- a/web-api/package.json
+++ b/web-api/package.json
@@ -25,9 +25,7 @@
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
-    "@youtube-sync/database": "../packages/database",
-    "@youtube-sync/domain": "../packages/domain",
-    "@youtube-sync/youtube-client": "../packages/youtube-client",
+    "@youtube-sync/core": "../packages/core",
     "aws-sdk": "^2.1057.0",
     "googleapis": "^92.0.0",
     "reflect-metadata": "^0.1.13",
