--- a/monitor/package.json
+++ b/monitor/package.json
@@ -7,9 +7,7 @@
         "@pulumi/aws": "^4.0.0",
         "@pulumi/awsx": "^0.30.0",
         "@pulumi/pulumi": "^3.0.0",
-        "@youtube-sync/database": "../packages/database",
-        "@youtube-sync/domain": "../packages/domain",
-        "@youtube-sync/youtube-client": "../packages/youtube-client",
+        "@youtube-sync/core": "../packages/core",
         "aws-sdk": "^2.1058.0"
     }
 }
