Fixed pulumi errors

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "target": "ES2020",
     "sourceMap": true,
-    "moduleResolution": "Node"
+    "moduleResolution": "Node",
+    "strict": true
   },
   "exclude": [
     "node_modules"
