--- a/monitor/package.json
+++ b/monitor/package.json
@@ -1,13 +1,17 @@
 {
     "name": "monitor",
+    "version": "1.0.0",
     "devDependencies": {
         "@types/node": "^14"
     },
     "dependencies": {
+        "@googleapis/youtube": "^2.0.0",
         "@pulumi/aws": "^4.0.0",
         "@pulumi/awsx": "^0.30.0",
         "@pulumi/pulumi": "^3.0.0",
-        "@youtube-sync/core": "../packages/core",
-        "aws-sdk": "^2.1058.0"
+        "aws-sdk": "^2.1058.0",
+        "dynamoose": "^2.8.5",
+        "google-auth-library": "^7.11.0",
+        "ytdl-core": "^4.10.0"
     }
 }
